# xpto_recomendation_api

./: .env  Dockerfile  LICENSE  README.html  README.md  pyproject.toml
src/: config.py  dependencies.py  main.py
src/api/: recommendation_router.py  recommendations.py  recommendations_router.py
src/models/: recommendation_model.py
src/services/: recommendation_service.py
tests/: conftest.py  locustfile.py  test_recommendation_router.py  test_recommendation_service.py
tests/fixtures/: recommendation_service_fixture.py
