[tool.poetry]
name = "xpto-recomendation-api"
version = "0.1.0"
description = ""
authors = ["Pedro Lucas Damasceno <pedrolucas.dmscno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
plotly = "^5.24.0"
nbformat = "^5.10.4"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
locust = "^2.31.5"
gunicorn = "^23.0.0"
cachetools = "^5.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
